fix: improve code snippet vertical spacing

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,9 +1,14 @@
 .gatsby-highlight-code-line {
-  background-color: #feb;
-  display: block;
-  margin-right: -1em;
-  margin-left: -1em;
-  padding-right: 1em;
-  padding-left: 0.75em;
-  border-left: 0.25em solid #f99;
+	background-color: #feb;
+	display: block;
+	margin-right: -1em;
+	margin-left: -1em;
+	padding-right: 1em;
+	padding-left: 0.75em;
+	border-left: 0.25em solid #f99;
+}
+
+.gatsby-highlight {
+	margin-top: -1em;
+	margin-bottom: 2em;
 }
